# mentoria_joao

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
.planning/ebook-creator/: ROADMAP.md
.planning/ebook-creator/phases/01-foundation/: 01-01-SUMMARY.md
.planning/ebook-creator/phases/02-data-access/: 02-01-SUMMARY.md
alembic/: env.py
alembic/versions/: 4a0ca513a47e_create_initial_tables.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  chapter.py  project.py  user.py
app/repositories/: __init__.py  base.py  chapter_repo.py  project_repo.py  user_repo.py
examples/: aula01_models_puro.py  aula01_oop_demo.py  aula02_sqlalchemy_models.py  aula03_crud_completo.py  aula03_repository_demo.py
